layout issues harder than I anticipated

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background: rgb(195, 73, 34);
+  background: linear-gradient(
+    234deg,
+    rgba(195, 73, 34, 1) 34%,
+    rgba(255, 255, 255, 1) 74%
+  );
+}
